--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,6 @@
       "**/CVS": true
    },
    "files.autoSave": "off",
-   "workbench.colorTheme": "Visual Studio Dark",
+   "workbench.colorTheme": "chalice-color-theme-dark",
    "editor.defaultFormatter": "HookyQR.beautify"
 }
